minified and combined javascript

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,13 +6,7 @@
     %meta{:charset => "utf-8"}
     %title= "ARE WE small YET?"
 
-    / TODO minify and concatenate them
-    = javascript_include_tag "jquery.min.js"
-    = javascript_include_tag "jquery.flot.min.js"
-    = javascript_include_tag "jquery.flot.resize.min.js"
-    = javascript_include_tag "jquery.flot.selection.min.js"
     = javascript_include_tag :data
-    = javascript_include_tag :plugins
     = javascript_include_tag :application
     = stylesheet_link_tag :application
 
@@ -24,4 +18,4 @@
 
     #footer
       = link_to "Sources on GitHub.", "https://github.com/ttaubert/are-we-small-yet"
-      = link_to "javascripts/data.js", "Download data."
+      = link_to "Download data.", "javascripts/data.js"
